<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#293340"
    >

    <LinearLayout
        android:id="@+id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#232c37"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="14dp"
            android:background="@drawable/iv_back_selector"
            android:clickable="true"
            android:onClick="onClick"
            android:padding="20dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="28dp"
            android:text="@string/set_password"
            android:textColor="#ffffff"
            android:textSize="15dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_describe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_title"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="21dp"
        android:layout_marginTop="34dp"
        android:text="@string/describe"
        android:textColor="#0ad9b2"
        android:textSize="12dp" />

    <com.devilwwj.loginandregister.views.CleanEditText
        android:id="@+id/et_password"
        style="@style/login_edit_style"
        android:layout_below="@+id/tv_describe"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:ems="16"
        android:hint="请设置密码"
        android:inputType="textPassword" />

    <View
        android:layout_width="300dp"
        android:layout_height="0.5dp"
        android:layout_below="@+id/et_password"
        android:layout_centerHorizontal="true"
        android:background="#525f6e" />

    <CheckBox
        android:id="@+id/cb_show_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_password"
        android:layout_marginLeft="230dp"
        android:text="@string/show_password"
        android:textColor="#ffffff"
        android:textSize="12dp" />

    <Button
        android:id="@+id/bt_next"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cb_show_password"
        android:layout_centerHorizontal="true"
        android:background="@drawable/btn_login_selector"
        android:text="@string/next"
        android:textSize="30dp" />

</RelativeLayout>