<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg">


    <!--<ImageView
        android:id="@+id/iv_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:padding="20dp"
        android:src="@mipmap/ic_login_cancle_normal" /> -->

    <!-- <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:text="@string/login"
         android:textColor="#000000"
         android:textSize="30dp" /> -->

    <Button
        android:id="@+id/btn_guest"
        android:layout_width="48dp"
        android:layout_height="28dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="8dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/btn_login_selector"
        android:text="@string/guest"
        android:textColor="#ffffff"
        android:textSize="12dp" />

    <ImageView

        android:id="@+id/iv_logo"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="VIA intelgente future"
        android:textColor="#ffffff"
        android:textSize="14dp" />

    <RelativeLayout


        android:id="@+id/input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:layout_marginTop="50dp">

        <ImageView
            android:id="@+id/iv_iconphone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/line1"

            android:layout_alignBottom="@+id/line1"

            android:src="@mipmap/icon_phone" />


        <com.devilwwj.loginandregister.views.CleanEditText
            android:id="@+id/et_email_phone"
            style="@style/login_edit_style"
            android:layout_centerHorizontal="true"
            android:layout_toRightOf="@+id/iv_iconphone"
            android:hint="@string/phone"
            android:inputType="phone"
            android:maxLength="11" />

        <View
            android:id="@+id/line1"
            android:layout_width="312dp"
            android:layout_height="0.5dp"
            android:layout_below="@+id/et_email_phone"
            android:layout_centerHorizontal="true"
            android:background="#525f6e" />

        <ImageView
            android:id="@+id/iv_iconmima"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/line2"
            android:layout_alignLeft="@+id/line2"

            android:src="@mipmap/icon_mima" />

        <com.devilwwj.loginandregister.views.CleanEditText
            android:id="@+id/et_password"
            style="@style/login_edit_style"
            android:layout_below="@+id/line1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@+id/iv_iconmima"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <View
            android:id="@+id/line2"
            android:layout_width="312dp"
            android:layout_height="0.5dp"
            android:layout_below="@+id/et_password"
            android:layout_centerHorizontal="true"
            android:background="#525f6e" />

        <CheckBox
            android:id="@+id/cb_showpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/line2"
            android:layout_marginLeft="238dp"
            android:layout_marginTop="22dp"
            android:button="@drawable/checkbox_selector"
            android:paddingLeft="8dp"
            android:text="@string/show_password"
            android:textColor="#ffffff"
            android:textSize="12dp"


            />

    </RelativeLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_login_selector"
        android:onClick="onClick"
        android:text="@string/login"
        android:textColor="#Ffffff"
        android:textSize="16dp" />

    <!-- <RelativeLayout
         android:id="@+id/third_login_explain_layout"
         android:layout_width="match_parent"
         android:layout_height="30dp"
         android:layout_below="@id/btn_login"
         android:layout_marginTop="45dp" >

         <TextView
             android:id="@+id/tv_third_login_explain"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:text="@string/use_third_account"
             android:textColor="#5c5c5c"
             android:textSize="14sp" />

         <View
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:layout_centerVertical="true"
             android:layout_marginLeft="60dp"
             android:layout_marginRight="10dp"
             android:layout_toLeftOf="@id/tv_third_login_explain"
             android:background="#969696" />

         <View
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="60dp"
             android:layout_toRightOf="@id/tv_third_login_explain"
             android:background="#969696" />
     </RelativeLayout>

     <RelativeLayout
         android:id="@+id/third_login_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/third_login_explain_layout"
         android:layout_marginTop="10dp" >

         <ImageView
             android:id="@+id/iv_wechat"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="60dp"
             android:onClick="onClick"
             android:src="@drawable/btn_login_wechat_selector" />

         <ImageView
             android:id="@+id/iv_qq"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:onClick="onClick"
             android:src="@drawable/btn_login_qq_selector" />

         <ImageView
             android:id="@+id/iv_sina"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_marginRight="60dp"
             android:onClick="onClick"
             android:src="@drawable/btn_login_sina_selector" />
     </RelativeLayout> -->

    <RelativeLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:gravity="center">

        <!--  <View
            android:id="@+id/seprate"
            android:layout_width="0.5dp"
            android:layout_height="15dp"
            android:layout_centerInParent="true"
            android:background="#5c5c5c" />-->


        <TextView
            android:id="@+id/tv_create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="onClick"
            android:padding="10dp"
            android:text="@string/register_account"
            android:textColor="#0ad9b2"
            android:textSize="12dp" />


        <TextView
            android:id="@+id/tv_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="78dp"
            android:layout_marginStart="78dp"
            android:layout_toEndOf="@+id/tv_create_account"
            android:layout_toRightOf="@+id/tv_create_account"
            android:clickable="true"
            android:onClick="onClick"
            android:padding="10dp"
            android:text="@string/forget_password"
            android:textColor="#0ad9b2"
            android:textSize="12dp" />
    </RelativeLayout>

</RelativeLayout>